# ParticulaSimples

./: .gitignore  CMakeLists.txt  OpenGLAPI.cpp  OpenGLAPI.hpp  Particle.cpp  Particle.hpp  Particula.cpp  Textura.cpp  backup  build.bat
Shaders/: BufferA.fs  BufferB.fs  BufferC.fs  ParticleFragment.fs  ParticuleVertex.vs  ParticuleVertex2.vs  Sprite.fs  VertexShader.vs  WaterFragment.fs  common.fs  image.fs
Shaders/back/: image.fs
includes/: OpenGLAPI.hpp  Particle.cpp  Shader.h  glad.c
includes/OpenGLAPI/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  OpenGLAPI.cpp  OpenGLAPI.hpp  build.bat  common.hpp  glad.c
includes/OpenGLAPI/includes/: Shader.h
includes/OpenGLAPI/src/: InputManager.cpp  InputManager.hpp  OpenGLAPI  OpenGLAPI.cpp  OpenGLAPI.hpp  ShaderComponent.cpp  ShaderComponent.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  common.hpp
includes/ParticleAPI/: CMakeLists.txt  Particle.cpp  Particle.hpp  build.bat
includes/SimpleParticle/: CMakeLists.txt  Particle.cpp  Particle.hpp
includes/SimpleParticle/includes/: Shader.h
includes/SimpleParticle/includes/OpenGLAPI/: CMakeLists.txt  common.hpp
includes/SimpleParticle/includes/OpenGLAPI/src/: InputManager.cpp  InputManager.hpp  OpenGLAPI.cpp  OpenGLAPI.hpp
src/: Particula.cpp
