cmake_minimum_required(VERSION 3.16)

set (CMAKE_CXX_STANDARD 17)

#add_link_options(-mwindows)
add_compile_options(-g -rdynamic)
SET(GCC_COVERAGE_COMPILE_FLAGS "-g -rdynamic")
project(Particle) 
add_executable(${PROJECT_NAME} stb_image/stb_image.cpp includes/Shader.h includes/glad.c Particula.cpp)
find_package(OpenGL REQUIRED)
find_package(glfw3 3.3 REQUIRED)
add_subdirectory("${CMAKE_SOURCE_DIR}/includes/OpenGLAPI")
add_subdirectory("${CMAKE_SOURCE_DIR}/includes/SimpleParticle")
#target_link_directories(OpenGL PRIVATE "C:/Program Files (x86)/OpenGLAPI/bin" PRIVATE "C:/Program Files (x86)/ParticleAPI/bin")
target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_BINARY_DIR}" "${PROJECT_BINARY_DIR}/includes/OpenGLAPI" "${PROJECT_BINARY_DIR}/includes/SimpleParticle")
target_link_libraries(${PROJECT_NAME} PRIVATE dl glfw OpenGL::GL OpenGLAPI SimpleParticle)
